# tmovi

./: Cargo.toml  build.rs  rust-toolchain.toml
gfx/world/backgrounds/: metrometropolis.aseprite
gfx/world/sprites/: player.aseprite
maps/: metrometropolis.tmx  metrometropolis.tsx  tmovi.tiled-session
src/: lib.rs  main.rs
