[package]
name = "tmovi"
version = "0.1.0"
authors = ["Violet Rosenzweig"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.20.5"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[build-dependencies]
tiled = { version = "0.12.1", default-features = false }
quote = "1"